using list view for projects page mockup as shown in http://www.flickr.com/photos/jessicaklein/6983137648/

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -10,6 +10,10 @@
        * of the topbar */
       padding-top: 60px;
     }
+    
+    .row-fluid {
+      margin-bottom: 1em;
+    }
     </style>
   </head>
   <body>
@@ -37,124 +41,54 @@
         <p><a class="btn btn-primary btn-large">Submit a Project &raquo;</a></p>
       </div>
       
-      <ul class="thumbnails">
-        <li class="span4">
-          <div class="thumbnail">
+      <div class="row-fluid show-grid thumbnail">
+        <div class="span4">
             <a href="#">
               <img src="http://placehold.it/360x250" alt="">
             </a>
             <div class="caption">
-              <h5>Internet Famous</h5>
-              <p>Make a meme.</p>
-              <p><a href="#" class="btn btn-primary">Make Project</a>
+              By Barack Obama
             </div>
-          </div>
-        </li>
-        
-        <li class="span4">
-          <div class="thumbnail">
+        </div>
+        <div class="span8">
+          <h3>Internet Famous</h3>
+          <p>Blarg.</p>
+          <p><a href="#" class="btn btn-primary">Make Project</a>
+        </div>
+      </div>
+
+      <div class="row-fluid show-grid thumbnail">
+        <div class="span4">
             <a href="#">
               <img src="http://placehold.it/360x250" alt="">
             </a>
             <div class="caption">
-              <h5>How To Make A Tumblr Theme</h5>
-              <p>Hack a HTML theme.</p>
-              <p><a href="#" class="btn btn-primary">Make Project</a>
+              By Barack Obama
             </div>
-          </div>
-        </li>
-        
-        <li class="span4">
-          <div class="thumbnail">
+        </div>
+        <div class="span8">
+          <h3>Internet Famous</h3>
+          <p>Blarg.</p>
+          <p><a href="#" class="btn btn-primary">Make Project</a>
+        </div>
+      </div>
+
+      <div class="row-fluid show-grid thumbnail">
+        <div class="span4">
             <a href="#">
               <img src="http://placehold.it/360x250" alt="">
             </a>
             <div class="caption">
-              <h5>Web Arcade</h5>
-              <p>Level up your HTML skills.</p>
-              <p><a href="#" class="btn btn-primary">Make Project</a>
+              By Barack Obama
             </div>
-          </div>
-        </li>
-        
-        <li class="span4">
-          <div class="thumbnail">
-            <a href="#">
-              <img src="http://placehold.it/360x250" alt="">
-            </a>
-            <div class="caption">
-              <h5>Internet Famous</h5>
-              <p>Make a meme.</p>
-              <p><a href="#" class="btn btn-primary">Make Project</a>
-            </div>
-          </div>
-        </li>
-        
-        <li class="span4">
-          <div class="thumbnail">
-            <a href="#">
-              <img src="http://placehold.it/360x250" alt="">
-            </a>
-            <div class="caption">
-              <h5>How To Make A Tumblr Theme</h5>
-              <p>Hack a HTML theme.</p>
-              <p><a href="#" class="btn btn-primary">Make Project</a>
-            </div>
-          </div>
-        </li>
-        
-        <li class="span4">
-          <div class="thumbnail">
-            <a href="#">
-              <img src="http://placehold.it/360x250" alt="">
-            </a>
-            <div class="caption">
-              <h5>Web Arcade</h5>
-              <p>Level up your HTML skills.</p>
-              <p><a href="#" class="btn btn-primary">Make Project</a>
-            </div>
-          </div>
-        </li>
-        
-        <li class="span4">
-          <div class="thumbnail">
-            <a href="#">
-              <img src="http://placehold.it/360x250" alt="">
-            </a>
-            <div class="caption">
-              <h5>Internet Famous</h5>
-              <p>Make a meme.</p>
-              <p><a href="#" class="btn btn-primary">Make Project</a>
-            </div>
-          </div>
-        </li>
-        
-        <li class="span4">
-          <div class="thumbnail">
-            <a href="#">
-              <img src="http://placehold.it/360x250" alt="">
-            </a>
-            <div class="caption">
-              <h5>How To Make A Tumblr Theme</h5>
-              <p>Hack a HTML theme.</p>
-              <p><a href="#" class="btn btn-primary">Make Project</a>
-            </div>
-          </div>
-        </li>
-        
-        <li class="span4">
-          <div class="thumbnail">
-            <a href="#">
-              <img src="http://placehold.it/360x250" alt="">
-            </a>
-            <div class="caption">
-              <h5>Web Arcade</h5>
-              <p>Level up your HTML skills.</p>
-              <p><a href="#" class="btn btn-primary">Make Project</a>
-            </div>
-          </div>
-        </li>
-      </ul>
+        </div>
+        <div class="span8">
+          <h3>Internet Famous</h3>
+          <p>Blarg.</p>
+          <p><a href="#" class="btn btn-primary">Make Project</a>
+        </div>
+      </div>
+      
     </div> <!-- /container -->
   </body>
 </html>
