--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -14,6 +14,10 @@
     .row-fluid {
       margin-bottom: 1em;
     }
+    
+    .row-fluid > .span4 img {
+      width: 360px;
+    }
     </style>
   </head>
   <body>
@@ -44,15 +48,16 @@
       <div class="row-fluid show-grid thumbnail">
         <div class="span4">
             <a href="#">
-              <img src="http://placehold.it/360x250" alt="">
+              <img src="https://wiki.mozilla.org/images/7/70/Internetfamous.jpg" alt="">
             </a>
             <div class="caption">
               By Barack Obama
             </div>
         </div>
         <div class="span8">
-          <h3>Internet Famous</h3>
-          <p>Blarg.</p>
+          <h3>Internet Famous: Make a Meme</h3>
+          <p>There are people who are on the web, and then, there are people who <em>make</em> the web. Do you have what it takes to go viral and become internet famous? Prove It. In this mission you will use your HTML and CSS swagger to mix and match elements to make a webpage featuring a meme to conquer all internet memes. Let your inner serious cat or Ryan Gosling hey girl shine to claim your Webmaking powers in the Web Arcade.</p>
+          <p><span class="label">Webpage Maker</span> <span class="label">Intermediate Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Design Thinking</span></p>
           <p><a href="#" class="btn btn-primary">Make Project</a>
         </div>
       </div>
@@ -60,15 +65,16 @@
       <div class="row-fluid show-grid thumbnail">
         <div class="span4">
             <a href="#">
-              <img src="http://placehold.it/360x250" alt="">
+              <img src="https://wiki.mozilla.org/images/8/88/Arcademap.jpg" alt="">
             </a>
             <div class="caption">
               By Barack Obama
             </div>
         </div>
         <div class="span8">
-          <h3>Internet Famous</h3>
-          <p>Blarg.</p>
+          <h3>Make Your Own Map of The Web Arcade</h3>
+          <p>HTML is a funny looking language; it is written inside brackets like <code>&lt;this&gt;</code> and <code>&lt;/this&gt;</code> and sometimes uses <code>"quotes like this."</code> In this project you will begin your journey in the world of HTML by exploring the syntax behind it to activate and customize a broken Map of the Web Arcade.</p>
+          <p><span class="label">Webpage Maker</span> <span class="label">Beginner Difficulty</span> <span class="label">HTML Syntax</span></p>
           <p><a href="#" class="btn btn-primary">Make Project</a>
         </div>
       </div>
@@ -76,19 +82,70 @@
       <div class="row-fluid show-grid thumbnail">
         <div class="span4">
             <a href="#">
-              <img src="http://placehold.it/360x250" alt="">
+              <img src="https://wiki.mozilla.org/images/5/59/Webstructables.jpg" alt="">
             </a>
             <div class="caption">
               By Barack Obama
             </div>
         </div>
         <div class="span8">
-          <h3>Internet Famous</h3>
-          <p>Blarg.</p>
+          <h3>Webstructables: Make a Tutorial</h3>
+          <p>Have you always wondered "why people don't get hand turkeys right?" or "why it is hard for some to sleep at night?" Well, the time has come for you to make your contribution to the world of the Open Web and create a fine webpage tutorial using your HTML & CSS and Popcorn wisdom.</p>
+          <p><span class="label">Webpage Maker</span> <span class="label">Advanced Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Popcorn</span> <span class="label">Teaching Others</span></p>
           <p><a href="#" class="btn btn-primary">Make Project</a>
         </div>
       </div>
-      
+
+      <div class="row-fluid show-grid thumbnail">
+        <div class="span4">
+            <a href="#">
+              <img src="https://wiki.mozilla.org/images/8/89/Stuck90s.png" alt="">
+            </a>
+            <div class="caption">
+              By Barack Obama
+            </div>
+        </div>
+        <div class="span8">
+          <h3>Stuck in the 90s</h3>
+          <p>Everyone has an embarrassing moment. For the Web that moment was in the 90s. Back then websites were boxy and ugly&mdash;kind of like this page! Wrangle your HTML and CSS style powers to change the content, the colors and the layout so that this webpage doesn't feel like it's stuck in the 90's anymore&hellip;</p>
+          <p><span class="label">Webpage Maker</span> <span class="label">Intermediate Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Design Thinking</span></p>
+          <p><a href="#" class="btn btn-primary">Make Project</a>
+        </div>
+      </div>
+
+      <div class="row-fluid show-grid thumbnail">
+        <div class="span4">
+            <a href="#">
+              <img src="https://wiki.mozilla.org/images/3/34/Popdiy.png" alt="">
+            </a>
+            <div class="caption">
+              By Barack Obama
+            </div>
+        </div>
+        <div class="span8">
+          <h3>Hack a Commercial</h3>
+          <p>Add your own voice to an old commercial by adding popups and commentary using the Mozilla Popcornmaker. In this DIY activity, you can change meanings, extend messages, and otherwise recontextualize the video using the ever popular "Pop Up Video" template.</p>
+          <p><span class="label">Popcorn Maker</span> <span class="label">Intermediate Difficulty</span> <span class="label">Hacking</span> <span class="label">Design Thinking</span></p>
+          <p><a href="#" class="btn btn-primary">Make Project</a>
+        </div>
+      </div>
+
+      <div class="row-fluid show-grid thumbnail">
+        <div class="span4">
+            <a href="#">
+              <img src="https://wiki.mozilla.org/images/5/5c/Iathumb.png" alt="">
+            </a>
+            <div class="caption">
+              By Barack Obama
+            </div>
+        </div>
+        <div class="span8">
+          <h3>Inanimate Alice DIY</h3>
+          <p>A user generated digital novel and Hackasaurus X-ray Goggles, what better tools to engage the future generation of webmakers! The mission is to teach the basics of coding through the lens of youth interest in storytelling. This challenge invites youth to creative a narrative based on characters and a storyline they create, while learning how to remix the Web.</p>
+          <p><span class="label">Hackasaurus</span> <span class="label">Beginner Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Writing</span></p>
+          <p><a href="#" class="btn btn-primary">Make Project</a>
+        </div>
+      </div>      
     </div> <!-- /container -->
   </body>
 </html>
