added introductory blurb to hero unit and fixed authors.

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -40,8 +40,12 @@
 
     <div class="container">
       <div class="hero-unit">
-        <h1>Projects</h1>
-        <p>Here are all our cool projects. You can also submit one.</p>
+        <h1>What Are Projects?</h1>
+        <p>Webpagemaker Projects help you to learn something by hacking an existing webpage to make your own. In conjunction with the Mozilla Summer Code Party we will be launching this initiative by releasing a set of game-like projects that will help you to develop basic HTML and CSS skills and make several unique webpages. In addition to Mozilla projects, participants will have the opportunity to submit their own projects for others to tinker with.</p>
+
+        <p>The Mozilla Foundation will be creating several different kinds of projects- so that users will be able to make web-based projects using Webpagemaker, Popcornmaker, the Hackasaurus X-Ray Goggles or access instruction DIY recipes. All of these projects will eventually accessed through the Mozilla Webmakers site.</p>
+
+        <p><em>As the Mozilla Webmakers site is in development, we will be staging some of the Projects here so that we can user test them prior to the Summer release.</em></p>
         <p><a class="btn btn-primary btn-large">Submit a Project &raquo;</a></p>
       </div>
       
@@ -51,7 +55,7 @@
               <img src="https://wiki.mozilla.org/images/7/70/Internetfamous.jpg" alt="">
             </a>
             <div class="caption">
-              By Barack Obama
+              By Mozilla
             </div>
         </div>
         <div class="span8">
@@ -68,7 +72,7 @@
               <img src="https://wiki.mozilla.org/images/8/88/Arcademap.jpg" alt="">
             </a>
             <div class="caption">
-              By Barack Obama
+              By Mozilla
             </div>
         </div>
         <div class="span8">
@@ -85,7 +89,7 @@
               <img src="https://wiki.mozilla.org/images/5/59/Webstructables.jpg" alt="">
             </a>
             <div class="caption">
-              By Barack Obama
+              By Mozilla
             </div>
         </div>
         <div class="span8">
@@ -102,7 +106,7 @@
               <img src="https://wiki.mozilla.org/images/8/89/Stuck90s.png" alt="">
             </a>
             <div class="caption">
-              By Barack Obama
+              By Mozilla
             </div>
         </div>
         <div class="span8">
@@ -119,7 +123,7 @@
               <img src="https://wiki.mozilla.org/images/3/34/Popdiy.png" alt="">
             </a>
             <div class="caption">
-              By Barack Obama
+              By Mozilla
             </div>
         </div>
         <div class="span8">
@@ -136,7 +140,7 @@
               <img src="https://wiki.mozilla.org/images/5/5c/Iathumb.png" alt="">
             </a>
             <div class="caption">
-              By Barack Obama
+              By Hive NYC
             </div>
         </div>
         <div class="span8">
