--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -119,7 +119,7 @@
 
       <div class="row-fluid show-grid thumbnail">
         <div class="span4">
-            <a href="#">
+            <a href="https://wiki.mozilla.org/Webmakers/Projects/Popcorn-DIY">
               <img src="https://wiki.mozilla.org/images/3/34/Popdiy.png" alt="">
             </a>
             <div class="caption">
@@ -130,13 +130,13 @@
           <h3>Hack a Commercial</h3>
           <p>Add your own voice to an old commercial by adding popups and commentary using the Mozilla Popcornmaker. In this DIY activity, you can change meanings, extend messages, and otherwise recontextualize the video using the ever popular "Pop Up Video" template.</p>
           <p><span class="label">Popcorn Maker</span> <span class="label">Intermediate Difficulty</span> <span class="label">Hacking</span> <span class="label">Design Thinking</span></p>
-          <p><a href="#" class="btn btn-primary">Make Project</a>
+          <p><a href="https://wiki.mozilla.org/Webmakers/Projects/Popcorn-DIY" class="btn btn-primary">Make Project</a>
         </div>
       </div>
 
       <div class="row-fluid show-grid thumbnail">
         <div class="span4">
-            <a href="#">
+            <a href="https://wiki.mozilla.org/Webmakers/Projects/InanimateAlice-DIY">
               <img src="https://wiki.mozilla.org/images/5/5c/Iathumb.png" alt="">
             </a>
             <div class="caption">
@@ -147,7 +147,7 @@
           <h3>Inanimate Alice DIY</h3>
           <p>A user generated digital novel and Hackasaurus X-ray Goggles, what better tools to engage the future generation of webmakers! The mission is to teach the basics of coding through the lens of youth interest in storytelling. This challenge invites youth to creative a narrative based on characters and a storyline they create, while learning how to remix the Web.</p>
           <p><span class="label">Hackasaurus</span> <span class="label">Beginner Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Writing</span></p>
-          <p><a href="#" class="btn btn-primary">Make Project</a>
+          <p><a href="https://wiki.mozilla.org/Webmakers/Projects/InanimateAlice-DIY" class="btn btn-primary">Make Project</a>
         </div>
       </div>      
     </div> <!-- /container -->
