added webstructables link

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -85,7 +85,7 @@
 
       <div class="row-fluid show-grid thumbnail">
         <div class="span4">
-            <a href="#">
+            <a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//dl.dropbox.com/u/5445372/site/web-structable.html">
               <img src="https://wiki.mozilla.org/images/5/59/Webstructables.jpg" alt="">
             </a>
             <div class="caption">
@@ -96,7 +96,7 @@
           <h3>Webstructables: Make a Tutorial</h3>
           <p>Have you always wondered "why people don't get hand turkeys right?" or "why it is hard for some to sleep at night?" Well, the time has come for you to make your contribution to the world of the Open Web and create a fine webpage tutorial using your HTML & CSS and Popcorn wisdom.</p>
           <p><span class="label">Webpage Maker</span> <span class="label">Advanced Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Popcorn</span> <span class="label">Teaching Others</span></p>
-          <p><a href="#" class="btn btn-primary">Make Project</a>
+          <p><a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//dl.dropbox.com/u/5445372/site/web-structable.html" class="btn btn-primary">Make Project</a>
         </div>
       </div>
 
