added link to webarcademap

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -68,7 +68,7 @@
 
       <div class="row-fluid show-grid thumbnail">
         <div class="span4">
-            <a href="#">
+            <a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/webarcademap.html">
               <img src="https://wiki.mozilla.org/images/8/88/Arcademap.jpg" alt="">
             </a>
             <div class="caption">
@@ -79,7 +79,7 @@
           <h3>Make Your Own Map of The Web Arcade</h3>
           <p>HTML is a funny looking language; it is written inside brackets like <code>&lt;this&gt;</code> and <code>&lt;/this&gt;</code> and sometimes uses <code>"quotes like this."</code> In this project you will begin your journey in the world of HTML by exploring the syntax behind it to activate and customize a broken Map of the Web Arcade.</p>
           <p><span class="label">Webpage Maker</span> <span class="label">Beginner Difficulty</span> <span class="label">HTML Syntax</span></p>
-          <p><a href="#" class="btn btn-primary">Make Project</a>
+          <p><a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/webarcademap.html" class="btn btn-primary">Make Project</a>
         </div>
       </div>
 
