linked internet famous project

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -51,7 +51,7 @@
       
       <div class="row-fluid show-grid thumbnail">
         <div class="span4">
-            <a href="#">
+            <a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/internetfamous.html">
               <img src="https://wiki.mozilla.org/images/7/70/Internetfamous.jpg" alt="">
             </a>
             <div class="caption">
@@ -62,7 +62,7 @@
           <h3>Internet Famous: Make a Meme</h3>
           <p>There are people who are on the web, and then, there are people who <em>make</em> the web. Do you have what it takes to go viral and become internet famous? Prove It. In this mission you will use your HTML and CSS swagger to mix and match elements to make a webpage featuring a meme to conquer all internet memes. Let your inner serious cat or Ryan Gosling hey girl shine to claim your Webmaking powers in the Web Arcade.</p>
           <p><span class="label">Webpage Maker</span> <span class="label">Intermediate Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Design Thinking</span></p>
-          <p><a href="#" class="btn btn-primary">Make Project</a>
+          <p><a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/internetfamous.html" class="btn btn-primary">Make Project</a>
         </div>
       </div>
 
