added stuck in the 90s link

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -102,7 +102,7 @@
 
       <div class="row-fluid show-grid thumbnail">
         <div class="span4">
-            <a href="#">
+            <a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/elements.html%2523">
               <img src="https://wiki.mozilla.org/images/8/89/Stuck90s.png" alt="">
             </a>
             <div class="caption">
@@ -113,7 +113,7 @@
           <h3>Stuck in the 90s</h3>
           <p>Everyone has an embarrassing moment. For the Web that moment was in the 90s. Back then websites were boxy and ugly&mdash;kind of like this page! Wrangle your HTML and CSS style powers to change the content, the colors and the layout so that this webpage doesn't feel like it's stuck in the 90's anymore&hellip;</p>
           <p><span class="label">Webpage Maker</span> <span class="label">Intermediate Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Design Thinking</span></p>
-          <p><a href="#" class="btn btn-primary">Make Project</a>
+          <p><a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/elements.html%2523" class="btn btn-primary">Make Project</a>
         </div>
       </div>
 
