--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -46,7 +46,8 @@
         <p>The Mozilla Foundation will be creating several different kinds of projects- so that users will be able to make web-based projects using Webpagemaker, Popcornmaker, the Hackasaurus X-Ray Goggles or access instruction DIY recipes. All of these projects will eventually accessed through the Mozilla Webmakers site.</p>
 
         <p><em>As the Mozilla Webmakers site is in development, we will be staging some of the Projects here so that we can user test them prior to the Summer release.</em></p>
-        <p><a class="btn btn-primary btn-large">Submit a Project &raquo;</a></p>
+        <!--
+        <p><a class="btn btn-primary btn-large">Submit a Project &raquo;</a></p> -->
       </div>
       
       <div class="row-fluid show-grid thumbnail">
