--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -25,7 +25,7 @@
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar"></a>
-          <a class="brand" href="/">Webpage Maker</a>
+          <a class="brand" href="/">Test Webpage Maker</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="/editor">Editor</a></li>
