--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/media/css/bootstrap.min.css">
     <style>
     body {
-      /* 60px to make the container go all the way to the bottom
+      /* 60px to make the container and cupcakes go all the way to the bottom
        * of the topbar */
       padding-top: 60px;
     }
