--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/media/css/bootstrap.min.css">
     <style>
     body {
-      /* 60px to make the container and cupcakes go all the way to the bottom
+      /* 60px to make the container go all the way to the bottom
        * of the topbar */
       padding-top: 60px;
     }
@@ -41,13 +41,19 @@
     <div class="container">
       <div class="hero-unit">
         <h1>What Are Projects?</h1>
-        <p>Webpagemaker Projects help you to learn something by hacking an existing webpage to make your own. In conjunction with the Mozilla Summer Code Party we will be launching this initiative by releasing a set of game-like projects that will help you to develop basic HTML and CSS skills and make several unique webpages. In addition to Mozilla projects, participants will have the opportunity to submit their own projects for others to tinker with.</p>
+        <p><bold>Learning by making.</bold> Webmaker projects are designed to help you make something amazing on the web fast.</p>
 
-        <p>The Mozilla Foundation will be creating several different kinds of projects- so that users will be able to make web-based projects using Webpagemaker, Popcornmaker, the Hackasaurus X-Ray Goggles or access instruction DIY recipes. All of these projects will eventually accessed through the Mozilla Webmakers site.</p>
-
-        <p><em>As the Mozilla Webmakers site is in development, we will be staging some of the Projects here so that we can user test them prior to the Summer release.</em></p>
-        <!--
-        <p><a class="btn btn-primary btn-large">Submit a Project &raquo;</a></p> -->
+        <p>Using Mozilla Webmaker tools like Popcorn, Hackasaurus and Webpage Maker, you can: <p>
+        <ul>
+        <li>take apart and remix web sites</li>
+        <li>make your own webpages, interactive videos and other cool stuff in minutes</li>
+        <li>sharpen your webmaking skills. From HTML and CSS to fancy stuff</li>
+        </ul>
+        <p>We're preparing a set of these projects for the Mozilla Summer Code Party. The goal: teach the world the basics of coding and webmaking. Through bite-sized games, projects and recipes that are easy, social and fun. Partners and contributors will be able to share their own webmaker projects as well. </p>
+        <p>Help kick the tires on the beta projects below. Are they easy to use? Helpful for learning? Fun?
+Let us know by filling out this fast and easy survey: </p>
+  
+        <p><a class="btn btn-primary btn-large">Tell us what you think >> &raquo;</a></p> 
       </div>
       
       <div class="row-fluid show-grid thumbnail">
