--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -40,7 +40,7 @@
 
     <div class="container">
       <div class="hero-unit">
-        <h1>What Are Projects?</h1>
+        <h1>Projects</h1><br>
         <p><bold>Learning by making.</bold> Webmaker projects are designed to help you make something amazing on the web fast.</p>
 
         <p>Using Mozilla Webmaker tools like Popcorn, Hackasaurus and Webpage Maker, you can: <p>
@@ -51,9 +51,9 @@
         </ul>
         <p>We're preparing a set of these projects for the Mozilla Summer Code Party. The goal: teach the world the basics of coding and webmaking. Through bite-sized games, projects and recipes that are easy, social and fun. Partners and contributors will be able to share their own webmaker projects as well. </p>
         <p>Help kick the tires on the beta projects below. Are they easy to use? Helpful for learning? Fun?
-Let us know by filling out this fast and easy survey: </p>
+Let us know by filling out this fast and easy questionnaire: </p>
   
-        <p><a class="btn btn-primary btn-large">Tell us what you think >> &raquo;</a></p> 
+        <p><a class="btn btn-primary btn-large"><a href="https://docs.google.com/spreadsheet/viewform?formkey=dERCYVFSQVhyWkxDUC1haFJpRjRrc0E6MA#gid=0">Tell us what you think >>&raquo;</a></p> 
       </div>
       
       <div class="row-fluid show-grid thumbnail">
