--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -53,7 +53,7 @@
         <p>Help kick the tires on the beta projects below. Are they easy to use? Helpful for learning? Fun?
 Let us know by filling out this fast and easy questionnaire: </p>
   
-        <p><a class="btn btn-primary btn-large"><a href="https://docs.google.com/spreadsheet/viewform?formkey=dERCYVFSQVhyWkxDUC1haFJpRjRrc0E6MA#gid=0">Tell us what you think >></a>&raquo;</a></p> 
+        <p><a class="btn btn-primary btn-large"<a href="https://docs.google.com/spreadsheet/viewform?formkey=dERCYVFSQVhyWkxDUC1haFJpRjRrc0E6MA#gid=0">Tell us what you think&raquo;</a></p> 
       </div>
       
       <div class="row-fluid show-grid thumbnail">
