--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -41,7 +41,7 @@
     <div class="container">
       <div class="hero-unit">
         <h1>Projects</h1><br>
-        <p><bold>Learning by making.</bold> Webmaker projects are designed to help you make something amazing on the web fast.</p>
+        <p>Webmaker projects are designed to help you make something amazing on the web fast.</p>
 
         <p>Using Mozilla Webmaker tools like Popcorn, Hackasaurus and Webpage Maker, you can: <p>
         <ul>
