--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -66,8 +66,8 @@ Let us know by filling out this fast and easy questionnaire: </p>
             </div>
         </div>
         <div class="span8">
-          <h3>Internet Famous: Make a Meme</h3>
-          <p>There are people who are on the web, and then, there are people who <em>make</em> the web. Do you have what it takes to go viral and become internet famous? Prove It. In this mission you will use your HTML and CSS swagger to mix and match elements to make a webpage featuring a meme to conquer all internet memes. Let your inner serious cat or Ryan Gosling hey girl shine to claim your Webmaking powers in the Web Arcade.</p>
+          <h3>Make Your Own Meme</h3>
+          <p>Do you have what it takes to go viral and become internet famous? Prove it. This project let's you use your HTML and CSS swagger to create your own web page -- featuring a meme to conquer all internet memes. Let your inner serious cat or Ryan Gosling hey girl shine.</p>
           <p><span class="label">Webpage Maker</span> <span class="label">Intermediate Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Design Thinking</span></p>
           <p><a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/internetfamous.html" class="btn btn-primary">Make Project</a>
         </div>
@@ -152,7 +152,7 @@ Let us know by filling out this fast and easy questionnaire: </p>
         </div>
         <div class="span8">
           <h3>Inanimate Alice DIY</h3>
-          <p>A user generated digital novel and Hackasaurus X-ray Goggles, what better tools to engage the future generation of webmakers! The mission is to teach the basics of coding through the lens of youth interest in storytelling. This challenge invites youth to creative a narrative based on characters and a storyline they create, while learning how to remix the Web.</p>
+          <p>A user generated digital novel and Hackasaurus X-ray Goggles, what better tools to engage the future generation of webmakers? The mission is to teach the basics of coding through the lens of youth interest in storytelling. This challenge invites youth to create a narrative based on characters and a storyline they create, while learning how to remix the Web.</p>
           <p><span class="label">Hackasaurus</span> <span class="label">Beginner Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Writing</span></p>
           <p><a href="https://wiki.mozilla.org/Webmakers/Projects/InanimateAlice-DIY" class="btn btn-primary">Make Project</a>
         </div>
