edited project titles

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -100,7 +100,7 @@ Let us know by filling out this fast and easy questionnaire: </p>
             </div>
         </div>
         <div class="span8">
-          <h3>Webstructables: Make a Tutorial</h3>
+          <h3>Make your own "webstructable" how-to</h3>
           <p>Have you always wondered "why people don't get hand turkeys right?" or "why it is hard for some to sleep at night?" Well, the time has come for you to make your contribution to the world of the Open Web and create a fine webpage tutorial using your HTML & CSS and Popcorn wisdom.</p>
           <p><span class="label">Webpage Maker</span> <span class="label">Advanced Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Popcorn</span> <span class="label">Teaching Others</span></p>
           <p><a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//dl.dropbox.com/u/5445372/site/web-structable.html" class="btn btn-primary">Make Project</a>
@@ -117,7 +117,7 @@ Let us know by filling out this fast and easy questionnaire: </p>
             </div>
         </div>
         <div class="span8">
-          <h3>Stuck in the 90s</h3>
+          <h3>Make ugly '90s webpages pretty</h3>
           <p>Everyone has an embarrassing moment. For the Web that moment was in the 90s. Back then websites were boxy and ugly&mdash;kind of like this page! Wrangle your HTML and CSS style powers to change the content, the colors and the layout so that this webpage doesn't feel like it's stuck in the 90's anymore&hellip;</p>
           <p><span class="label">Webpage Maker</span> <span class="label">Intermediate Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Design Thinking</span></p>
           <p><a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/elements.html%2523" class="btn btn-primary">Make Project</a>
@@ -134,7 +134,7 @@ Let us know by filling out this fast and easy questionnaire: </p>
             </div>
         </div>
         <div class="span8">
-          <h3>Hack a Commercial</h3>
+          <h3>Remix your own TV commercial</h3>
           <p>Add your own voice to an old commercial by adding popups and commentary using the Mozilla Popcornmaker. In this DIY activity, you can change meanings, extend messages, and otherwise recontextualize the video using the ever popular "Pop Up Video" template.</p>
           <p><span class="label">Popcorn Maker</span> <span class="label">Intermediate Difficulty</span> <span class="label">Hacking</span> <span class="label">Design Thinking</span></p>
           <p><a href="https://wiki.mozilla.org/Webmakers/Projects/Popcorn-DIY" class="btn btn-primary">Make Project</a>
@@ -151,7 +151,7 @@ Let us know by filling out this fast and easy questionnaire: </p>
             </div>
         </div>
         <div class="span8">
-          <h3>Inanimate Alice DIY</h3>
+          <h3>Create your own "Inanimate Alice" episode</h3>
           <p>A user generated digital novel and Hackasaurus X-ray Goggles, what better tools to engage the future generation of webmakers? The mission is to teach the basics of coding through the lens of youth interest in storytelling. This challenge invites youth to create a narrative based on characters and a storyline they create, while learning how to remix the Web.</p>
           <p><span class="label">Hackasaurus</span> <span class="label">Beginner Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Writing</span></p>
           <p><a href="https://wiki.mozilla.org/Webmakers/Projects/InanimateAlice-DIY" class="btn btn-primary">Make Project</a>
