Edited Inanimate Alice copy

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -152,7 +152,7 @@ Let us know by filling out this fast and easy questionnaire: </p>
         </div>
         <div class="span8">
           <h3>Create your own "Inanimate Alice" episode</h3>
-          <p>A user generated digital novel and Hackasaurus X-ray Goggles, what better tools to engage the future generation of webmakers? The mission is to teach the basics of coding through the lens of youth interest in storytelling. This challenge invites youth to create a narrative based on characters and a storyline they create, while learning how to remix the Web.</p>
+          <p>This project uses the popular "Inanimate Alice" interactive novel and Mozilla Hackasaurus to create narrative mayhem. Youth can create their own narrative using characters and a storyline they create, learning how to remix the web along the way. </p>
           <p><span class="label">Hackasaurus</span> <span class="label">Beginner Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Writing</span></p>
           <p><a href="https://wiki.mozilla.org/Webmakers/Projects/InanimateAlice-DIY" class="btn btn-primary">Make Project</a>
         </div>
