Edited Remix your own commercial copy.

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -135,7 +135,7 @@ Let us know by filling out this fast and easy questionnaire: </p>
         </div>
         <div class="span8">
           <h3>Remix your own TV commercial</h3>
-          <p>Add your own voice to an old commercial by adding popups and commentary using the Mozilla Popcornmaker. In this DIY activity, you can change meanings, extend messages, and otherwise recontextualize the video using the ever popular "Pop Up Video" template.</p>
+          <p>Add your own voice to a cheesy 1950s TV commercial! Add pop-ups and commentary, change meanings, and hack pop culture using Mozilla Popcorn.</p>
           <p><span class="label">Popcorn Maker</span> <span class="label">Intermediate Difficulty</span> <span class="label">Hacking</span> <span class="label">Design Thinking</span></p>
           <p><a href="https://wiki.mozilla.org/Webmakers/Projects/Popcorn-DIY" class="btn btn-primary">Make Project</a>
         </div>
