Edited Stuck in 90s copy

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -118,7 +118,7 @@ Let us know by filling out this fast and easy questionnaire: </p>
         </div>
         <div class="span8">
           <h3>Make ugly '90s webpages pretty</h3>
-          <p>Everyone has an embarrassing moment. For the Web that moment was in the 90s. Back then websites were boxy and ugly&mdash;kind of like this page! Wrangle your HTML and CSS style powers to change the content, the colors and the layout so that this webpage doesn't feel like it's stuck in the 90's anymore&hellip;</p>
+          <p>Everyone has an embarrassing moment. For the web it was the '90s. Back then, websites were boxy and ugly -- kind of like this page! Wrangle your HTML and CSS style powers to change the content, colors and layout to drag these webpage out of the grungey '90s.</p>
           <p><span class="label">Webpage Maker</span> <span class="label">Intermediate Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Design Thinking</span></p>
           <p><a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/elements.html%2523" class="btn btn-primary">Make Project</a>
         </div>
