--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -101,7 +101,7 @@ Let us know by filling out this fast and easy questionnaire: </p>
         </div>
         <div class="span8">
           <h3>Make your own "webstructable" how-to</h3>
-          <p>Have you always wondered "why people don't get hand turkeys right?" or "why it is hard for some to sleep at night?" Well, the time has come for you to make your contribution to the world of the Open Web and create a fine webpage tutorial using your HTML & CSS and Popcorn wisdom.</p>
+          <p>This project lets you create your own web page tutorial. Use your new-found HTML, CSS and Popcorn wisdom to create the world's greatest how-to. What do you want to make today?</p>
           <p><span class="label">Webpage Maker</span> <span class="label">Advanced Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Popcorn</span> <span class="label">Teaching Others</span></p>
           <p><a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//dl.dropbox.com/u/5445372/site/web-structable.html" class="btn btn-primary">Make Project</a>
         </div>
