--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -83,8 +83,8 @@ Let us know by filling out this fast and easy questionnaire: </p>
             </div>
         </div>
         <div class="span8">
-          <h3>Make Your Own Map of The Web Arcade</h3>
-          <p>HTML is a funny looking language; it is written inside brackets like <code>&lt;this&gt;</code> and <code>&lt;/this&gt;</code> and sometimes uses <code>"quotes like this."</code> In this project you will begin your journey in the world of HTML by exploring the syntax behind it to activate and customize a broken Map of the Web Arcade.</p>
+          <h3>Hack The Web Arcade</h3>
+          <p>HTML is a funny looking language; it is written inside brackets like <code>&lt;this&gt;</code> and <code>&lt;/this&gt;</code> and sometimes uses <code>"quotes like this."</code> In this project you will begin your journey in the world of HTML by exploring the syntax behind it.Use the comments to navigate your way. Your goal: fix a broken map of the web arcade to unlock new missions and explore brave new webby worlds.</p>
           <p><span class="label">Webpage Maker</span> <span class="label">Beginner Difficulty</span> <span class="label">HTML Syntax</span></p>
           <p><a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//jessicaklein.com/betatest/webarcademap.html" class="btn btn-primary">Make Project</a>
         </div>
