renamed HTTP_STATIC template variable to HTTP_STATIC_URL.

--- a/webpagemaker/learning_projects/templates/learning_projects/meme.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/meme.html
@@ -100,7 +100,7 @@
               will spread like wildfire.
           -->
           <h1>Top Caption</h1>
-          <img src="{{ HTTP_STATIC }}meme/serious_cat.jpg"> 
+          <img src="{{ HTTP_STATIC_URL }}meme/serious_cat.jpg"> 
           <h2>Bottom Caption</h2>
           
         </div>
