--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -155,7 +155,22 @@ Let us know by filling out this fast and easy questionnaire: </p>
           <p><a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//dl.dropbox.com/u/5445372/site/web-structable.html" class="btn btn-primary">Make Project</a>
         </div>
       </div>
-      
+      <div class="row-fluid show-grid thumbnail">
+        <div class="span4">
+            <a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//dl.dropbox.com/u/5445372/site/web-structable.html">
+              <img src="https://wiki.mozilla.org/images/5/59/Webstructables.jpg" alt="">
+            </a>
+            <div class="caption">
+              By Hive NYC
+            </div>
+        </div>
+        <div class="span8">
+          <h3>Speak Your Mind</h3>
+          <p><em>Got something to shout about? </em>>A rant, cause, passion project or block party you want the world to know about? Shout it from the rooftops by making your own web page in minutes, using this handy remixable template. Then share it via email, Twitter, Facebook or URL. Easy!</p>
+          <p><span class="label">Webpage Maker</span> <span class="label">Beginner Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Civic Engagement</span> <span class="label">Creative Commons</span></p>
+          <p><a href="http://toolness.github.com/friendlycode/?p=/p/151">Make Project</a>
+        </div>
+      </div>
     </div> <!-- /container -->
   </body>
 </html>
