--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -157,8 +157,8 @@ Let us know by filling out this fast and easy questionnaire: </p>
       </div>
       <div class="row-fluid show-grid thumbnail">
         <div class="span4">
-            <a href="http://toolness.github.com/friendlycode/?p=/mission-slurp%3Furl%3Dhttp%253A//dl.dropbox.com/u/5445372/site/web-structable.html">
-              <img src="https://wiki.mozilla.org/images/5/59/Webstructables.jpg" alt="">
+            <a href="http://toolness.github.com/friendlycode/?p=/p/151">
+              <img src="https://wiki.mozilla.org/images/b/be/Soapthumb.png" alt="">
             </a>
             <div class="caption">
               By Hive NYC
