--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -168,7 +168,7 @@ Let us know by filling out this fast and easy questionnaire: </p>
           <h3>Speak Your Mind</h3>
           <p><em>Got something to shout about? </em>>A rant, cause, passion project or block party you want the world to know about? Shout it from the rooftops by making your own web page in minutes, using this handy remixable template. Then share it via email, Twitter, Facebook or URL. Easy!</p>
           <p><span class="label">Webpage Maker</span> <span class="label">Beginner Difficulty</span> <span class="label">HTML</span> <span class="label">CSS</span> <span class="label">Civic Engagement</span> <span class="label">Creative Commons</span></p>
-          <p><a href="http://toolness.github.com/friendlycode/?p=/p/151">Make Project</a>
+          <p><a href="http://toolness.github.com/friendlycode/?p=/p/151"class="btn btn-primary">Make Project</a>
         </div>
       </div>
     </div> <!-- /container -->
