--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -41,39 +41,41 @@
 
     {% block body %} {% endblock %}
 
-    <footer id="colophon">
-      <div class="row">
-        <div class="span3">
-          <h2>make.mozilla</h2>
+    <section id="page-bottom">
+      <footer id="colophon">
+        <div class="row">
+          <div class="span3">
+            <h2>make.mozilla</h2>
+          </div>
+
+          <nav class="span2">
+            <h3>About</h3>
+            <ul>
+              <li><a href="">About Us</a></li>
+              <li><a href="">Contact Us</a></li>
+              <li><a href="">Privacy Policy</a></li>
+              <li><a href="">Legal Notices</a></li>
+            </ul>
+          </nav>
+          <nav class="span2">
+            <h3>Connect with us</h3>
+            <ul>
+              <li><a href="">Twitter</a></li>
+              <li><a href="">Facebook</a></li>
+            </ul>
+          </nav>
+
+          <nav class="span2">
+            <h3>Make something!</h3>
+            <ul>
+              <li><a href="">Projects</a></li>
+              <li><a href="">Tools</a></li>
+              <li><a href="">Events</a></li>
+            </ul>
+          </nav>
         </div>
-
-        <nav class="span2">
-          <h3>About</h3>
-          <ul>
-            <li><a href="">About Us</a></li>
-            <li><a href="">Contact Us</a></li>
-            <li><a href="">Privacy Policy</a></li>
-            <li><a href="">Legal Notices</a></li>
-          </ul>
-        </nav>
-        <nav class="span2">
-          <h3>Connect with us</h3>
-          <ul>
-            <li><a href="">Twitter</a></li>
-            <li><a href="">Facebook</a></li>
-          </ul>
-        </nav>
-
-        <nav class="span2">
-          <h3>Make something!</h3>
-          <ul>
-            <li><a href="">Projects</a></li>
-            <li><a href="">Tools</a></li>
-            <li><a href="">Events</a></li>
-          </ul>
-        </nav>
-      </div>
-    </footer>
+      </footer>
+    </section>
 
   </div>
   </div>
