tweak colophon padding and make the footer background extend fully to the bottom

--- a/media/css/wpm.css
+++ b/media/css/wpm.css
@@ -1,6 +1,7 @@
 #wrapper {
   background-color: #F3EFE6;
   background-image: url("/media/img/gradientbackground.png");
+  padding-bottom: 0;
 }
 
 #masthead .row {
@@ -64,6 +65,10 @@ b {
 #page-bottom {
   background-color: #fff;
   border-top: 1px solid #ccc;
+}
+
+#colophon {
+  padding: 30px;
 }
 
 #colophon h2 {
