--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -30,9 +30,9 @@
           <nav id="nav-main" role="navigation">
             <ol>
               <li><a href="">Editor</a></li>
-              <li><a href="">Projects</a></li>
-              <li><a href="">Gallery</a></li>
-              <li><a href="">About</a></li>
+              <li><a href="{{ url('webpagemaker.website.views.projects') }}">Projects</a></li>
+              <li><a href="{{ url('webpagemaker.website.views.gallery') }}">Gallery</a></li>
+              <li><a href="{{ url('webpagemaker.website.views.about') }}">About</a></li>
             </ol>
           </nav>
         </div>
